# Sandbox-Cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Sandbox.sln  Sandbox_vs2013.sln
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
FindPowerOfTwo/: main.cpp
FloatMathSpeedTest/: FloatMathSpeedTest.cpp  FloatMathSpeedTest.vcxproj  FloatMathSpeedTest.vcxproj.filters  ReadMe.txt
GaussianMatrix/: CMakeLists.txt
InvSqrt_Double/: CMakeLists.txt  InvSqrt_Double.cpp  InvSqrt_Double.vcxproj  InvSqrt_Double.vcxproj.filters  ReadMe.txt  stdafx.cpp
InvSqrt_Single/: CMakeLists.txt  InvSqrt_Single.cpp  InvSqrt_Single.vcxproj  InvSqrt_Single.vcxproj.filters  stdafx.cpp
RegisterHotkey/: CMakeLists.txt
SSESwizzle/: SSESwizzle.cpp
Vulkan01/: CMakeLists.txt  main.cpp
advmemcpy/: CMakeLists.txt  README.md  ReadMe.txt  advmemcpy.vcxproj  advmemcpy.vcxproj.filters  main.cpp  measurer.cpp  measurer.hpp  memcpy_adv.h  memcpy_thread.cpp  os.cpp  os.hpp  stdafx.cpp
advmemcpy/results/: amd-ryzen-1500x-2400mhz-v1.txt  amd-ryzen-2600x-2133mhz-v2.txt
benchmarks/: CMakeLists.txt
benchmarks/core2corelatency/: CMakeLists.txt  main.cpp
benchmarks/float/: CMakeLists.txt  main.cpp
boxes/benchmarks/core2corelatency/: CMakeLists.txt  main.cpp  measure.asm
boxes/benchmarks/float/: CMakeLists.txt  main.cpp
boxes/hellextractor/: CMakeLists.txt  main.cpp
boxes/old/InvSqrt_Double/: CMakeLists.txt
boxes/old/InvSqrt_Single/: CMakeLists.txt
boxes/old/advmemcpy/: CMakeLists.txt  memcpy_thread.cpp  os.hpp
boxes/old/advmemcpy/asmlib/: CMakeLists.txt
boxes/old/advmemcpy/results/: amd-threadripper-1950x-2800mhz-v2.txt  intel-i5-7300hq-v2.txt
boxes/windows/mmdeviceapi-playback/: CMakeLists.txt  main.cpp
is_power_of_two/: CMakeLists.txt
nvenc-profile-extractor/: CMakeLists.txt  main.cpp
old/FindPowerOfTwo/: CMakeLists.txt  main.cpp
old/GaussianMatrix/: main.cpp
old/InvSqrt_Double/: CMakeLists.txt
old/InvSqrt_Single/: InvSqrt_Single.cpp
old/RegisterHotkey/: main.cpp
old/SSESwizzle/: CMakeLists.txt
old/advmemcpy/: CMakeLists.txt
old/advmemcpy/asmlib/: CMakeLists.txt
old/advmemcpy/results/: amd-ryzen-1500x-2400mhz-v2.txt  amd-ryzen-2600x-2133mhz-v1.txt
old/is_power_of_two/: main.cpp
vs2017/: CMakeLists.txt
vs2017/aligned_storage/: CMakeLists.txt  main.cpp
